bug on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -231,9 +231,9 @@ ul {
 	border-radius: 4px;
 }
 
-@media (only screen
+@media only screen
 and (min-device-width : 375px)
-and (max-device-width : 667px)) {
+and (max-device-width : 667px) {
 	#left-column, #right-column {
 		width: 100%;
 	  float: none;
